--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -4,7 +4,7 @@
 
   <div class="row animated fadeIn fast">
 
-    <div class="col-md-4">
+    <div id="imagenServicio" class="col-md-4">
       <img [src]="getSantizeUrl(item.img)" [alt]="item.nombre">
       <br><br>
     </div>
@@ -13,30 +13,30 @@
       <h3>{{ item.nombre }}</h3>
       <hr>
       <p>
-        Descripción:
+        <span class="subtitulo">Descripción:</span> 
         {{ item.descripcion }}
       </p>
       <p>
-        Costo:
+          <span class="subtitulo">Costo:</span>
         {{ item.costo | number:'.2-2'}} USD
       </p>
       <p>
-        Tipo:
+          <span class="subtitulo">Tipo:</span>
         {{ item.tipo }}
       </p>
 
       <hr>
       <div *ngIf="item.tipo=='Alimentacion'">
         <p>
-          Número de personas:
+            <span class="subtitulo">Número de personas:</span>
           {{ item.numeroPersonas }}
         </p>
         <p>
-          Tipo de comida:
+            <span class="subtitulo">Tipo de comida:</span>
           {{ item.tipoComida }}
         </p>
         <p>
-          Cantidad de platos:
+            <span class="subtitulo">Cantidad de platos:</span>
           {{ item.cantidadPlatos }}
         </p>
       </div>
@@ -44,81 +44,81 @@
 
       <div *ngIf="item.tipo=='PaseoEcologico'">
         <p>
-          Número de personas:
+            <span class="subtitulo">Número de personas:</span>
           {{ item.numeroPersonas }}
         </p>
         <p>
-          Orígen:
+            <span class="subtitulo">Orígen:</span>
           {{ item.origen }}
         </p>
         <p>
-          Destino:
+            <span class="subtitulo">Destino:</span>
           {{ item.destino }}
         </p>
         <p>
-          Hora Inicio:
+            <span class="subtitulo">Hora Inicio:</span>
           {{ item.horaInicio }}
         </p>
         <p>
-          Hora Final:
+            <span class="subtitulo">Hora Final:</span>
           {{ item.horaFinal }}
         </p>
       </div>
 
       <div *ngIf="item.tipo=='Transporte'">
         <p>
-          Número de personas:
+            <span class="subtitulo">Número de personas:</span>
           {{ item.numeroPersonas }}
         </p>
         <p>
-          Empresa transportadora:
+            <span class="subtitulo">Empresa transportadora:</span>
           {{ item.empresa }}
         </p>
         <p>
-          Tipo de transporte:
+            <span class="subtitulo">Tipo de transporte:</span>
           {{ item.tipoTransporte }}
         </p>
         <p>
-          Orígen:
+            <span class="subtitulo">Orígen:</span>
           {{ item.origen }}
         </p>
         <p>
-          Destino:
+            <span class="subtitulo">Destino:</span>
           {{ item.destino }}
         </p>
         <p>
-          Hora Salida:
+            <span class="subtitulo">Hora Salida:</span>
           {{ item.horaSalida }}
         </p>
         <p>
-          Hora Llegada:
+            <span class="subtitulo">Hora Llegada:</span>
           {{ item.horaLlegada }}
         </p>
       </div>
 
       <div *ngIf="item.tipo=='Alojamiento'">
         <p>
-          Número de personas:
+            <span class="subtitulo">Número de personas:</span>
           {{ item.numeroPersonas }}
         </p>
         <p>
-          Tipo de alojamiento:
+            <span class="subtitulo">Tipo de alojamiento:</span>
           {{ item.tipoAlojamiento }}
         </p>
         <p>
-          Número de habitaciones:
+            <span class="subtitulo">Número de habitaciones:</span>
           {{ item.numeroHabitaciones }}
         </p>
         <p>
-          Número de baños:
+            <span class="subtitulo">Número de baños:</span>
           {{ item.numeroBanos }}
         </p>
         <p>
-          Servicio de Limpieza:
+            <span class="subtitulo">Servicio de Limpieza:</span>
           {{ item.servicioLimpieza }}
         </p>
         <p>
-          Servicio de Wi-Fi:
+            <span class="subtitulo">Servicio de Wi-Fi:</span>
           {{ item.servicioWifi }}
         </p>
       </div>
