--- a/WS/src/app/components/shared/navbar/navbar.component.html
+++ b/WS/src/app/components/shared/navbar/navbar.component.html
@@ -56,6 +56,9 @@
             <a class="nav-link" [routerLink]="['crearservicio']">Crear servicio</a>
           </li>
           <li class="nav-item" routerLinkActive="active">
+            <a class="nav-link" [routerLink]="['serviciosproveedor']">Mis servicios</a>
+          </li>
+          <li class="nav-item" routerLinkActive="active">
               <a class="nav-link" [routerLink]="['profile']">Perfil</a>
             </li>
           <li class="nav-item" routerLinkActive="active">
