minierror formulario corregido

--- a/WS/src/app/components/editarservicio/editarservicio.component.html
+++ b/WS/src/app/components/editarservicio/editarservicio.component.html
@@ -22,7 +22,7 @@
       </div>
 
       <div>
-          <label for="descripcion">Descripción: </label>
+          <label for="descripcion">Costo: </label>
           <input type="text" class="form-control" id="descripcion" [(ngModel)]="item.costo" >
       </div>
 
