Editar imagen servicio

--- a/WS/src/app/components/editarservicio/editarservicio.component.html
+++ b/WS/src/app/components/editarservicio/editarservicio.component.html
@@ -31,6 +31,15 @@
           <input type="text" class="form-control" id="descripcion" [(ngModel)]="item.tipo" readonly>
       </div>
 
+      <div>
+            <label class="image-upload-container btn btn-bwm">
+              <span>Seleccionar imagen</span>
+              <p></p>
+              <input type='file' (change)="onSelectFile($event)" formControlName="foto" class="form-control"
+                [ngClass]="{ 'is-invalid': submitted && f.foto.errors }">
+            </label>
+      </div>
+
       <div *ngIf="item.tipo == 'Alimentacion'">
 
           <div>
