--- a/WS/src/app/components/mostrarservicio/servicio-tarjeta/servicio-tarjeta.component.html
+++ b/WS/src/app/components/mostrarservicio/servicio-tarjeta/servicio-tarjeta.component.html
@@ -4,20 +4,21 @@
     <h4 class="card-title">{{ servicio.nombre }}</h4>
     <p class="card-text">{{servicio.tipo}}</p>
     <p class="card-text"> {{ servicio.descripcion }} </p>
-    <p class="card-text"><small class="text-muted">{{ servicio.pais }} - {{ servicio.ciudad }}</small></p>
-    <p class="card-text"><small class="text-muted">{{ servicio.costo | number:'.2-2' }} COP </small></p>
+    <p class="card-text">{{ servicio.pais }} - {{ servicio.ciudad }}</p>
+    <p class="card-text">Precio: {{ servicio.costo | number:'.2-2' }} COP </p>
 
     <div *ngIf="this.sesion == 'usuario'">
         <button (click)="agregarServicio(servicio)"
-        type="button" class="btn btn-success ">
+        type="button" class="btn btn-success btn-block">
         <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
         Agregar al carrito
       </button>
     </div>
     
+    <br>
 
     <button (click)="verServicio()"
-      type="button" class="btn btn-dark ">
+      type="button" class="btn btn-dark btn-block">
       Ver más...
     </button>
 
