--- a/WS/src/app/components/shoppingcart/cart/cart.component.html
+++ b/WS/src/app/components/shoppingcart/cart/cart.component.html
@@ -25,7 +25,7 @@
         <tr class="carrito-total">
           <td colspan="2"></td>
           <td>
-            Total: {{this.total[0]}} USD
+            Total: {{this.total}} USD
           </td>
         </tr>
       </tfoot>
