--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -133,9 +133,9 @@
 </div>
 <div>
   <h2> Preguntas </h2>
-  <form (ngSubmit)="hacerPregunta()" #preguntaForm="ngForm">
+  <form id="preguntarForm" (ngSubmit)="hacerPregunta()" #preguntaForm="ngForm">
     <input class="form-control mr-sm-2" placeholder="Hacer una pregunta al proveedor..." (click)="preguntar=true"
-      required name="pregunta" [(ngModel)]="pregunta.pregunta" maxlength="50" #txtPregunta="ngModel" />
+      required name="pregunta" [(ngModel)]="pregunta.pregunta" maxlength="200" #txtPregunta="ngModel" />
     <div id="botonesPregunta">
       <button type="submit" class="btn btn-success" [hidden]="!preguntar" [disabled]="!preguntaForm.form.valid">Hacer pregunta</button>
       <button type="button" class="btn btn-danger" [hidden]="!preguntar" (click)="cancelarPregunta()">Cancelar</button>
@@ -163,7 +163,7 @@
       <div>{{ pregunta.respuesta }}</div>
     </div>
     <div *ngIf="servicioProveedorid == userid && !(preguntass[i].respuesta.length>1) && !preguntass[i].responder">
-      <button type="button" class="btn btn-success" (click)="responder(i)">Responder</button>
+      <button id="responderBtn" type="button" class="btn btn-success" (click)="responder(i)">Responder</button>
     </div>
     <div [hidden]="!preguntass[i].responder">
       <form (ngSubmit)="agregarRespuesta(i)" #preguntaForm="ngForm">
