--- a/WS/src/app/components/servicio/servicio.component.html
+++ b/WS/src/app/components/servicio/servicio.component.html
@@ -177,7 +177,7 @@
       </form>
     </div>
   </div>
-  <div *ngIf="preguntass.length==0 && preguntasCargadas">
+  <div class="alert alert-info" *ngIf="preguntass.length==0 && preguntasCargadas">
     <p>No hay preguntas en este servicio, sé el primero en hacer una pregunta al proveedor</p>
   </div>
 </div>
