--- a/WS/src/app/components/shoppingcart/cart/cart.component.html
+++ b/WS/src/app/components/shoppingcart/cart/cart.component.html
@@ -18,7 +18,7 @@
             <span>1</span>
           </td>
           <td>{{item.nombre}}</td>
-          <td>{{item.costo | number:'.2-2'}} USD</td>
+          <td>{{item.costo | number:'.2-2'}} COP</td>
         </tr>
       </tbody>
       <tfoot>
