--- a/WS/src/app/components/crearservicio/crearservicio.component.html
+++ b/WS/src/app/components/crearservicio/crearservicio.component.html
@@ -269,7 +269,7 @@
     </div>
     <div class="form-group">
       <label for="costo">Costo</label>
-      <input type="text" formControlName="costo" class="form-control"
+      <input type="number" formControlName="costo" class="form-control"
         [ngClass]="{ 'is-invalid': submitted && f.costo.errors }" />
     </div>
 
