--- a/WS/src/app/components/register/register.component.html
+++ b/WS/src/app/components/register/register.component.html
@@ -10,7 +10,7 @@
 
       <div class="form-group">
         <label for="edad">Edad</label>
-        <input type="text" formControlName="edad" class="form-control"  [ngClass]="{ 'is-invalid': submitted && f.edad.errors }"/>
+        <input type="number" formControlName="edad" class="form-control"  [ngClass]="{ 'is-invalid': submitted && f.edad.errors }"/>
     </div>
 
 
