--- a/WS/src/app/components/shoppingcart/cart/cart.component.html
+++ b/WS/src/app/components/shoppingcart/cart/cart.component.html
@@ -2,7 +2,7 @@
  <div class="carritoNo" *ngIf="this.servicios.length===0" >
     No tienes productos seleccionados
  </div>
-  <div class="carritoSi" *ngIf="this.carrito.servicios.length>0" >
+  <div class="carritoSi" *ngIf="this.servicios.length>0" >
     <table class="table table-striped table-responsive-md btn-table">
       <thead>
         <tr >
